@@ -1,5 +1,7 @@
 2010-03-03  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
 
+	* include/dlvhex/ID.hpp: Adding kind to take out property rule modatoms.
+
 	* include/dlvhex/MLPSolver.hpp: Finishing comp.
 	* include/dlvhex/OrdinaryAtomTable.hpp: Likewise.
 	* include/dlvhex/Interpretation.hpp: Likewise.
